--- a/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
+++ b/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
@@ -28,24 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for ** or pow(): 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-c35f41ad7311>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'b'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'c'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'str' and 'int'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Error: Only integers can be squared!\n"
      ]
     }
    ],
    "source": [
-    "for i in ['a','b','c']:\n",
-    "    print(i**2)"
+    "try:\n",
+    "    for i in ['a','b','c']:\n",
+    "        print(i**2)\n",
+    "except TypeError:\n",
+    "    print(\"Type error: Only integers can be squared!\")"
    ]
   },
   {
@@ -58,26 +57,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-6f985c4c80dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Error: Cannot divide by zero!\nAll Done\n"
      ]
     }
    ],
    "source": [
-    "x = 5\n",
-    "y = 0\n",
+    "try:\n",
+    "    x = 5\n",
+    "    y = 0\n",
     "\n",
-    "z = x/y"
+    "    z = x/y\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Error: Cannot divide by zero!\")\n",
+    "finally:\n",
+    "    print(\"All Done\")\n"
    ]
   },
   {
@@ -97,27 +97,61 @@
    "outputs": [],
    "source": [
     "def ask():\n",
-    "    pass"
+    "\n",
+    "    while True:\n",
+    "        try:\n",
+    "           num =  int(input(\"Enter a number: \"))\n",
+    "        except:\n",
+    "            print(\"Error. You didn't enter a number. Please try again.\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            break\n",
+    "        finally:\n",
+    "            print(\"Action complete.\")\n",
+    "\n",
+    "    print(\"Number accepted. The square root of your number is \" + num**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input an integer: null\n",
-      "An error occurred! Please try again!\n",
-      "Input an integer: 2\n",
-      "Thank you, your number squared is:  4\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'true' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-5c573c944e42>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-6-89acb635b17d>\u001b[0m in \u001b[0;36mask\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mwhile\u001b[0m \u001b[0mtrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m            \u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Enter a number: \\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'true' is not defined"
      ]
     }
    ],
    "source": [
     "ask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "try:\n",
+    "input(\"Enter a number: \"\n",
+    "except:\n",
+    "    print(\"Error. You didn't enter a number. Please try again.\")\n",
+    "    continue\n",
+    "else:\n",
+    "    break\n",
+    "finally:\n",
+    "    print(\"Action complete.\")\n",
+    "\n",
+    "print(\"Number accepted. The square root of your number is \" + num**2)"
    ]
   },
   {
@@ -130,9 +164,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "626010a4237b71828a67e01a483b78d41d0bfc413d0d57cda307317e6b919f36"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -144,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.2-final"
   }
  },
  "nbformat": 4,
