--- a/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
+++ b/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -73,9 +73,10 @@
    "source": [
     "import random\n",
     "\n",
-    "suits = pass\n",
-    "ranks = pass\n",
-    "values = pass\n",
+    "suits = ('Hearts', 'Diamonds', 'Spades', 'Clubs')\n",
+    "ranks = ('Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine', 'Ten', 'Jack', 'Queen', 'King', 'Ace')\n",
+    "values = {'Two':2, 'Three':3, 'Four':4, 'Five':5, 'Six':6, 'Seven':7, 'Eight':8, 'Nine':9, 'Ten':10, 'Jack':10,\n",
+    "         'Queen':10, 'King':10, 'Ace':11}\n",
     "\n",
     "playing = True"
    ]
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -106,11 +107,13 @@
    "source": [
     "class Card:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, suit, rank):\n",
+    "        self.suit = suit\n",
+    "        self.rank = rank\n",
+    "        self.value = values[rank]\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass"
+    "        return f\"{self.rank} of {self.suit}\""
    ]
   },
   {
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -141,16 +144,19 @@
     "        self.deck = []  # start with an empty list\n",
     "        for suit in suits:\n",
     "            for rank in ranks:\n",
-    "                pass\n",
+    "                self.deck.append(Card(suit, rank))\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass\n",
+    "        deck_contents = ''\n",
+    "        for card in self.deck:\n",
+    "            deck_contents += \"\\n\" + card.__str__()\n",
+    "        return \"The deck consists of:\\n\" + deck_contents\n",
     "\n",
     "    def shuffle(self):\n",
     "        random.shuffle(self.deck)\n",
     "        \n",
     "    def deal(self):\n",
-    "        pass"
+    "        return self.deck.pop()"
    ]
   },
   {
@@ -162,14 +168,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The deck consists of:\n\nTwo of Hearts\nThree of Hearts\nFour of Hearts\nFive of Hearts\nSix of Hearts\nSeven of Hearts\nEight of Hearts\nNine of Hearts\nTen of Hearts\nJack of Hearts\nQueen of Hearts\nKing of Hearts\nAce of Hearts\nTwo of Diamonds\nThree of Diamonds\nFour of Diamonds\nFive of Diamonds\nSix of Diamonds\nSeven of Diamonds\nEight of Diamonds\nNine of Diamonds\nTen of Diamonds\nJack of Diamonds\nQueen of Diamonds\nKing of Diamonds\nAce of Diamonds\nTwo of Spades\nThree of Spades\nFour of Spades\nFive of Spades\nSix of Spades\nSeven of Spades\nEight of Spades\nNine of Spades\nTen of Spades\nJack of Spades\nQueen of Spades\nKing of Spades\nAce of Spades\nTwo of Clubs\nThree of Clubs\nFour of Clubs\nFive of Clubs\nSix of Clubs\nSeven of Clubs\nEight of Clubs\nNine of Clubs\nTen of Clubs\nJack of Clubs\nQueen of Clubs\nKing of Clubs\nAce of Clubs\n"
+     ]
+    }
+   ],
    "source": [
     "test_deck = Deck()\n",
-    "print(test_deck)"
+    "print(test_deck)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 101
+    }
+   ],
+   "source": [
+    "len(test_deck.deck)"
    ]
   },
   {
@@ -189,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -200,12 +234,103 @@
     "        self.cards = []  # start with an empty list as we did in the Deck class\n",
     "        self.value = 0   # start with zero value\n",
     "        self.aces = 0    # add an attribute to keep track of aces\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        hand_contents = ''\n",
+    "        for card in self.cards:\n",
+    "            hand_contents += \"\\n\" + card.__str__()\n",
+    "        return \"Player hand: \" + hand_contents\n",
     "    \n",
-    "    def add_card(self,card):\n",
-    "        pass\n",
+    "    def add_card(self,new_card):\n",
+    "        # card passed in from Deck class from Deck.deal()\n",
+    "        self.cards.append(new_card)\n",
+    "        self.value += values[new_card.rank]\n",
+    "\n",
+    "        # track aces\n",
+    "        if new_card.rank == 'Ace':\n",
+    "            self.aces += 1\n",
     "    \n",
     "    def adjust_for_ace(self):\n",
-    "        pass"
+    "        \n",
+    "        # IF TOTAL VALUE > 21 AND I STILL HAVE AND ACE\n",
+    "        # THEN CHANGE MY ACE TO BE A 1 INSTEAD IF AN 11\n",
+    "        while self.value > 21 and self.aces:    # self.aces == True if greater than zero\n",
+    "            self.value -= 10\n",
+    "            self.aces -= 1\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Seven of Hearts\n7\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_deck = Deck()\n",
+    "test_deck.shuffle()\n",
+    "\n",
+    "# PLAYER\n",
+    "test_player = Hand()\n",
+    "# Deal 1 card from deck\n",
+    "pulled_card = test_deck.deal()\n",
+    "print(pulled_card)\n",
+    "test_player.add_card(pulled_card)\n",
+    "print(test_player.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Player hand: \nSeven of Hearts\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_player)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternate method the above, in 1 line\n",
+    "test_player.add_card(test_deck.deal())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
+   "source": [
+    "test_player.value"
    ]
   },
   {
@@ -218,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -226,15 +351,15 @@
    "source": [
     "class Chips:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        self.total = 100  # This can be set to a default value or supplied by a user input\n",
+    "    def __init__(self, total = 100):\n",
+    "        self.total = total  # This can be set to a default value or supplied by a user input\n",
     "        self.bet = 0\n",
     "        \n",
     "    def win_bet(self):\n",
-    "        pass\n",
+    "        self.total += self.bet\n",
     "    \n",
     "    def lose_bet(self):\n",
-    "        pass"
+    "        self.total -= self.bet"
    ]
   },
   {
@@ -255,15 +380,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def take_bet():\n",
+    "def take_bet(chips):\n",
     "    \n",
-    "    pass"
+    "    try:\n",
+    "        chips.bet = int(input(\"How many chips do you want to bet? (0-{})\".format(chips.total)))\n",
+    "    \n",
+    "    except ValueError:\n",
+    "        print(\"Only numbers are excepted. Please try again. \")\n",
+    "        take_bet(chips)\n",
+    "    else:\n",
+    "        if chips.bet > chips.total:\n",
+    "            print(\"Sorry, you don't have enough chips for that bet! You have: {}\".format(chips.total))\n",
+    "            take_bet(chips)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test_chips = Chips()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#take_bet(test_chips)"
    ]
   },
   {
@@ -276,15 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def hit(deck,hand):\n",
-    "    \n",
-    "    pass"
+    "\n",
+    "    # adds card from the deck to the player hand\n",
+    "    hand.add_card(deck.deal())\n",
+    "    hand.adjust_for_ace()   # adjusting ace value if total value on hand exceeds 21\n"
    ]
   },
   {
@@ -298,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -307,7 +461,20 @@
     "def hit_or_stand(deck,hand):\n",
     "    global playing  # to control an upcoming while loop\n",
     "    \n",
-    "    pass"
+    "    while True:\n",
+    "        x = input('Hit or Stand? ([h] or [s])')\n",
+    "\n",
+    "        if x[0].lower() == 'h':\n",
+    "            hit(deck, hand)\n",
+    "\n",
+    "        elif x[0].lower() == 's':\n",
+    "            print(\"Player stands. Dealer's turn.\")\n",
+    "            playing = False\n",
+    "\n",
+    "        else:\n",
+    "           print(\"Sorry, invalid input. Please enter Hit or Stand. ([h] or [s])\")\n",
+    "           continue\n",
+    "        break\n"
    ]
   },
   {
@@ -320,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -328,11 +495,33 @@
    "source": [
     "def show_some(player,dealer):\n",
     "    \n",
-    "    pass\n",
+    "    # Show only ONE of the dealer's cards\n",
+    "    print(\"\\n Dealer's Hand: \")\n",
+    "    print(\"First card hidden!\")\n",
+    "    print(dealer.cards[1])\n",
+    "\n",
+    "    # Show all (2 Cards) of the player's hand/cards\n",
+    "    print(\"\\n Player's Hand: \")\n",
+    "    for card in player.cards:\n",
+    "        print(card)\n",
+    "    \n",
     "    \n",
     "def show_all(player,dealer):\n",
     "    \n",
-    "    pass"
+    "    # show all the dealer's cards\n",
+    "    print(\"\\n Dealer's Hand: \")\n",
+    "    for card in dealer.cards:\n",
+    "        print(card)\n",
+    "    # calculate and display value (i.e: J+K == 20)\n",
+    "    print(f\" Value of Dealer's hand is: {dealer.value}\")\n",
+    "\n",
+    "    # show all the player's cards\n",
+    "    print(\"\\n Player's Hand: \")\n",
+    "    for card in player.cards:\n",
+    "        print(card)\n",
+    "    # calculate and display value (i.e: J+K == 20)\n",
+    "    print(f\" Value of Player's hand is: {player.value}\")\n",
+    "\n"
    ]
   },
   {
@@ -345,26 +534,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def player_busts():\n",
-    "    pass\n",
+    "def player_busts(player, dealer, chips):\n",
+    "    print(\"PLAYER BUSTED!\")\n",
+    "    chips.lose_bet()\n",
     "\n",
-    "def player_wins():\n",
-    "    pass\n",
+    "def player_wins(player, dealer, chips):\n",
+    "    print(\"PLAYER WINS!\")\n",
+    "    chips.win_bet()\n",
     "\n",
-    "def dealer_busts():\n",
-    "    pass\n",
+    "def dealer_busts(player, dealer, chips):\n",
+    "    print(\"PLAYER WINS! DEALER BUSTED!\")\n",
+    "    chips.win_bet()\n",
     "    \n",
-    "def dealer_wins():\n",
-    "    pass\n",
+    "def dealer_wins(player, dealer, chips):\n",
+    "    print(\"DEALER WINS!\")\n",
+    "    chips.lose_bet()\n",
     "    \n",
     "def push():\n",
-    "    pass"
+    "    print(\"Dealer and player tie! PUSH\")"
    ]
   },
   {
@@ -376,53 +569,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "===== WELCOME TO BLACKJACK =====\n",
+      "Sorry, you don't have enough chips for that bet! You have: 100\n",
+      "Only numbers are excepted. Please try again. \n",
+      "\n",
+      " Dealer's Hand: \n",
+      "First card hidden!\n",
+      "Nine of Spades\n",
+      "\n",
+      " Player's Hand: \n",
+      "Six of Spades\n",
+      "Seven of Spades\n",
+      "\n",
+      " Dealer's Hand: \n",
+      "Five of Clubs\n",
+      "Nine of Spades\n",
+      " Value of Dealer's hand is: 14\n",
+      "\n",
+      " Player's Hand: \n",
+      "Six of Spades\n",
+      "Seven of Spades\n",
+      " Value of Player's hand is: 13\n",
+      "DEALER WINS!\n",
+      "\n",
+      " Player total chips are at: 31.\n",
+      "Thank you for playing! \n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    # Print an opening statement\n",
     "\n",
-    "    \n",
+    "    print(\"===== WELCOME TO BLACKJACK =====\")\n",
     "    # Create & shuffle the deck, deal two cards to each player\n",
+    "    deck = Deck()\n",
+    "    deck.shuffle()\n",
+    "\n",
+    "    player_hand = Hand()\n",
+    "    player_hand.add_card(deck.deal())\n",
+    "    player_hand.add_card(deck.deal())\n",
+    "\n",
+    "    dealer_hand = Hand()\n",
+    "    dealer_hand.add_card(deck.deal())\n",
+    "    dealer_hand.add_card(deck.deal())\n",
     "\n",
     "    \n",
     "        \n",
     "    # Set up the Player's chips\n",
+    "    player_chips = Chips()\n",
     "    \n",
     "    \n",
     "    # Prompt the Player for their bet\n",
+    "    take_bet(player_chips)\n",
     "\n",
     "    \n",
     "    # Show cards (but keep one dealer card hidden)\n",
+    "    show_some(player_hand,dealer_hand)\n",
     "\n",
     "    \n",
     "    while playing:  # recall this variable from our hit_or_stand function\n",
     "        \n",
     "        # Prompt for Player to Hit or Stand\n",
-    "        \n",
+    "        print(\"===========================================\")\n",
+    "        hit_or_stand(deck, player_hand)\n",
     "        \n",
     "        # Show cards (but keep one dealer card hidden)\n",
+    "        show_some(player_hand,dealer_hand)\n",
     " \n",
     "        \n",
     "        # If player's hand exceeds 21, run player_busts() and break out of loop\n",
-    "        \n",
+    "        if player_hand.value > 21:\n",
+    "            player_busts(player_hand, dealer_hand, player_chips)\n",
     "\n",
     "            break\n",
     "\n",
     "    # If Player hasn't busted, play Dealer's hand until Dealer reaches 17\n",
+    "    if player_hand.value <= 21:\n",
+    "\n",
+    "        while dealer_hand.value < player_hand.value:\n",
+    "            hit(deck, dealer_hand)\n",
     "    \n",
     "    \n",
     "        # Show all cards\n",
+    "        show_all(player_hand, dealer_hand)\n",
     "    \n",
     "        # Run different winning scenarios\n",
-    "        \n",
+    "        if dealer_hand.value > 21:\n",
+    "            dealer_busts(player_hand, dealer_hand, player_chips)    # DEALER BUSTS\n",
+    "        elif dealer_hand.value > player_hand.value:\n",
+    "            dealer_wins(player_hand, dealer_hand, player_chips)     # DEALER WINS\n",
+    "        elif dealer_hand.value < player_hand.value:\n",
+    "            player_wins(player_hand, dealer_hand, player_chips)     # PLAYER WINS\n",
+    "        else:\n",
+    "            push(player_hand, dealer_hand)\n",
     "    \n",
     "    # Inform Player of their chips total \n",
+    "    print(\"\\n Player total chips are at: {}.\".format(player_chips.total))\n",
     "    \n",
     "    # Ask to play again\n",
+    "    new_game = input(\"Would you like to play another hand? [y]/[n]\")\n",
+    "\n",
+    "    if new_game[0].lower() == 'y':\n",
+    "        playing = True\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(\"Thank you for playing! \")\n",
     "\n",
     "        break"
    ]
@@ -438,9 +699,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "626010a4237b71828a67e01a483b78d41d0bfc413d0d57cda307317e6b919f36"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -452,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.2-final"
   }
  },
  "nbformat": 4,
