--- a/11-Python Generators/02-Iterators and Generators Homework.ipynb
+++ b/11-Python Generators/02-Iterators and Generators Homework.ipynb
@@ -24,36 +24,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def gensquares(N):\n",
-    "\n",
-    "    pass"
+    "    for num in range(N):\n",
+    "        yield num**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "0\n",
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n"
+      "0\n1\n4\n9\n16\n25\n36\n49\n64\n81\n"
      ]
     }
    ],
@@ -73,18 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "9"
+       "1"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
@@ -95,38 +86,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def rand_num(low,high,n):\n",
-    "\n",
-    "    pass"
+    "    for i in range(n):\n",
+    "        yield random.randint(low, high)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "6\n",
-      "1\n",
-      "10\n",
-      "5\n",
-      "8\n",
-      "2\n",
-      "8\n",
-      "5\n",
-      "4\n",
-      "5\n",
-      "1\n",
-      "4\n"
+      "7\n6\n4\n3\n9\n4\n10\n5\n6\n10\n7\n1\n"
      ]
     }
    ],
@@ -146,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +134,27 @@
    "source": [
     "s = 'hello'\n",
     "\n",
-    "#code here"
+    "s_iter = iter(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'h'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "next(s_iter)"
    ]
   },
   {
@@ -209,9 +209,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "626010a4237b71828a67e01a483b78d41d0bfc413d0d57cda307317e6b919f36"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -223,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
